Alterações de design

--- a/index.html
+++ b/index.html
@@ -12,71 +12,50 @@
 </head>
 
 <body>
-    <nav id="nav-header">
-        <div class="logo">
-            <h1>Matheus Mendes</h1>
-        </div>
-        <ul class="menu">
-            <li><a href="#">Sobre</a></li>
-            <li><a href="#">Projetos</a></li>
-            <li><a href="#">Social</a></li>
-        </ul>
-    </nav>
-    <br>
     <main>
-        <div class="box1">
-            <p>
-                <h3>O que é Lorem Ipsum?</h3>
-                Lorem Ipsum é simplesmente uma simulação de texto da indústria tipográfica e de impressos, e vem sendo utilizado desde o século XVI, quando um impressor desconhecido pegou uma bandeja de tipos e os embaralhou para fazer um livro de modelos de tipos. Lorem
-                Ipsum sobreviveu não só a cinco séculos, como também ao salto para a editoração eletrônica, permanecendo essencialmente inalterado. Se popularizou na década de 60, quando a Letraset lançou decalques contendo passagens de Lorem Ipsum, e
-                mais recentemente quando passou a ser integrado a softwares de editoração eletrônica como Aldus PageMaker.
-            </p>
-        </div>
-        <br>
-
-        <div class="box-model">
-            <div class="box2">
-                <pre>
-                    <h3>O que é Lorem Ipsum?</h3>
-                    Lorem Ipsum é simplesmente uma simulação de texto da 
-                    indústria tipográfica e de impressos, e vem sendo utilizado desde 
-                    o século XVI, quando um impressor desconhecido pegou uma 
-                bandeja de tipos e os embaralhou para fazer um livro de
-                modelos de tipos. Lorem Ipsum sobreviveu não só a cinco séculos,
-                como também ao salto para a editoração eletrônica, permanecendo 
-                essencialmente inalterado. Se popularizou na década de 60, 
-                quando a Letraset lançou decalques contendo passagens
-                de Lorem Ipsum, e mais recentemente quando passou a ser 
-                integrado a softwares de editoração eletrônica como Aldus PageMaker.
-            </pre>
+        <nav id="nav-header">
+            <div class="logo">
+                <h1>Matheus Mendes</h1>
             </div>
-            <br>
-            <div class="box3">
+            <ul class="menu">
+                <li><a href="#">Sobre</a></li>
+                <li><a href="#">Projetos</a></li>
+                <li><a href="#">Social</a></li>
+            </ul>
+        </nav>
+        <nav id="welcome-section">
+            <h1>Olá</h1>
+            <p>Meu nome é Matheus.</p>
+        </nav>
+        <br>
+        <div class="box-description">
+            <div class="box-img">
+                <!-- <h3>IMAGEM</h3> -->
+                <img src="https://dummyimage.com/300x300/000/fff" alt="img teste" />
+            </div>
+            <div class="box-content">
                 <pre>
                 <h3>O que é Lorem Ipsum?</h3>
-                Lorem Ipsum é simplesmente uma simulação de texto da 
-                indústria tipográfica e de impressos, e vem sendo utilizado desde 
-                o século XVI, quando um impressor desconhecido pegou uma 
-                bandeja de tipos e os embaralhou para fazer um livro de
-                modelos de tipos. Lorem Ipsum sobreviveu não só a cinco séculos,
-                como também ao salto para a editoração eletrônica, permanecendo 
-                essencialmente inalterado. Se popularizou na década de 60, 
-                quando a Letraset lançou decalques contendo passagens
-                de Lorem Ipsum, e mais recentemente quando passou a ser 
-                integrado a softwares de editoração eletrônica como Aldus PageMaker.
-            </pre>
+                Lorem Ipsum é simplesmente uma simulação de texto da indústria tipográfica e de 
+                impressos, e vem sendo utilizado desde o século XVI, quando um impressor desconhecido pegou uma bandeja de 
+                tipos e os embaralhou para fazer um livro de modelos de tipos. Lorem
+                Ipsum sobreviveu não só a cinco séculos, como também ao salto para a 
+                editoração eletrônica, permanecendo essencialmente inalterado. 
+                Se popularizou na década de 60, quando a Letraset lançou decalques contendo passagens de Lorem Ipsum,
+                e mais recentemente quando passou a ser integrado a softwares de 
+                editoração eletrônica como Aldus PageMaker.
+                </pre>
             </div>
         </div>
-        <br>
+        <nav id="nav-footer">
+            <p>Social Media</p>
+            <ul>
+                <li><a href="GitHub"><i class="fab fa-github"></i> GitHub</a></li>
+                <li><a href="Linkedin"><i class="fab fa-linkedin"></i> LinkedIn</a></li>
+                <li><a href="Contato"><i class="fas fa-user"></i> Contato</a></li>
+            </ul>
+        </nav>
     </main>
-    <br>
-    <nav id="nav-footer">
-        <ul>
-            <li><a href="GitHub"><i class="fab fa-github"></i> GitHub</a></li>
-            <li><a href="Linkedin"><i class="fab fa-linkedin"></i> LinkedIn</a></li>
-            <li><a href="Contato"><i class="fas fa-user"></i> Contato</a></li>
-        </ul>
-    </nav>
 </body>
 
 </html>
