--- a/index.html
+++ b/index.html
@@ -12,50 +12,115 @@
 </head>
 
 <body>
-    <main>
-        <nav id="nav-header">
-            <div class="logo">
-                <h1>Matheus Mendes</h1>
+    <header>
+        <div class="logo">
+            <h1>Matheus Mendes</h1>
+        </div>
+        <ul class="header-list">
+            <li><a href="#">Sobre</a></li>
+            <li><a href="#">Projetos</a></li>
+            <li><a href="#">Social</a></li>
+        </ul>
+    </header>
+    <nav id="bem-vindo">
+        <h3>Olá,</h3>
+        <h3>Meu nome é Matheus.</h3>
+        <h3>Prazer em te conhecer !</h3>
+    </nav>
+    <div class="box-description">
+        <div class="box-img">
+            <img src="https://dummyimage.com/300x300/000/fff" alt="img teste" />
+        </div>
+        <div class="box-content">
+            <h1>Sobre</h1>
+            <p>
+                <br>Estou me formando no curso de Gestão de Técnologia da Informação.
+                <br>Sempre gostei desta área de programação, diferentes ideias vão surgindo conforme o desenvolvimento de projetos vai evoluindo suas complexidades.
+                <br> Estou sempre disposto a aprender coisas novas e aplicando em projetos para realizar um aperfeiçoamento pessoal.
+                <br>
+            </p>
+        </div>
+    </div>
+    <br>
+    <div class="sessao-skills">
+        <div class="header-session">
+            <h3>Skills</h3><br>
+            <hr id="header-underline">
+        </div>
+        <div class="flex-skills">
+            <div class="content-skill">
+                <div class="logo-skill">
+                    <img src="resource/html5.jpg" alt="HTML5" id="skills-img">
+                    <p>HTML5</p>
+                </div>
+                <div class="descrição">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque impedit magni, corporis exercitationem soluta vitae itaque, rem eum odit quibusdam alias quasi totam facilis beatae et fuga quo esse eligendi?</p>
+                </div>
             </div>
-            <ul class="menu">
-                <li><a href="#">Sobre</a></li>
-                <li><a href="#">Projetos</a></li>
-                <li><a href="#">Social</a></li>
-            </ul>
-        </nav>
-        <nav id="welcome-section">
-            <h1>Olá</h1>
-            <p>Meu nome é Matheus.</p>
-        </nav>
-        <br>
-        <div class="box-description">
-            <div class="box-img">
-                <!-- <h3>IMAGEM</h3> -->
-                <img src="https://dummyimage.com/300x300/000/fff" alt="img teste" />
+            <div class="content-skill">
+                <div class="logo-skill">
+                    <img src="resource/CSS img.png" alt="CSS3" id="skills-img">
+                    <p>CSS3</p>
+                </div>
+                <div class="descrição">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque impedit magni, corporis exercitationem soluta vitae itaque, rem eum odit quibusdam alias quasi totam facilis beatae et fuga quo esse eligendi?</p>
+                </div>
             </div>
-            <div class="box-content">
-                <pre>
-                <h3>O que é Lorem Ipsum?</h3>
-                Lorem Ipsum é simplesmente uma simulação de texto da indústria tipográfica e de 
-                impressos, e vem sendo utilizado desde o século XVI, quando um impressor desconhecido pegou uma bandeja de 
-                tipos e os embaralhou para fazer um livro de modelos de tipos. Lorem
-                Ipsum sobreviveu não só a cinco séculos, como também ao salto para a 
-                editoração eletrônica, permanecendo essencialmente inalterado. 
-                Se popularizou na década de 60, quando a Letraset lançou decalques contendo passagens de Lorem Ipsum,
-                e mais recentemente quando passou a ser integrado a softwares de 
-                editoração eletrônica como Aldus PageMaker.
-                </pre>
+            <div class="content-skill">
+                <div class="logo-skill">
+                    <img src="resource/JavaSc.png" alt="JS" id="skills-img">
+                    <p>JavaScript</p>
+                </div>
+                <div class="descrição">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque impedit magni, corporis exercitationem soluta vitae itaque, rem eum odit quibusdam alias quasi totam facilis beatae et fuga quo esse eligendi?</p>
+                </div>
             </div>
         </div>
-        <nav id="nav-footer">
+        <br>
+    </div>
+    <br>
+    <div class="sessao-skills">
+        <div class="flex-skills">
+            <div class="content-skill">
+                <div class="logo-skill">
+                    <img src="resource/SQLimg.png" alt="JS" id="skills-img">
+                    <p>SQL Server</p>
+                </div>
+                <div class="descrição">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque impedit magni, corporis exercitationem soluta vitae itaque, rem eum odit quibusdam alias quasi totam facilis beatae et fuga quo esse eligendi?</p>
+                </div>
+            </div>
+            <div class="content-skill">
+                <div class="logo-skill">
+                    <img src="resource/cs.jpg" alt="JS" id="skills-img">
+                    <p>C#</p>
+                </div>
+                <div class="descrição">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque impedit magni, corporis exercitationem soluta vitae itaque, rem eum odit quibusdam alias quasi totam facilis beatae et fuga quo esse eligendi?</p>
+                </div>
+            </div>
+            <div class="content-skill">
+                <div class="logo-skill">
+                    <img src="resource/ASPnet.jpg" alt="JS" id="skills-img">
+                    <p>ASP.Net</p>
+                </div>
+                <div class="descrição">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque impedit magni, corporis exercitationem soluta vitae itaque, rem eum odit quibusdam alias quasi totam facilis beatae et fuga quo esse eligendi?</p>
+                </div>
+            </div>
+        </div>
+        <br>
+    </div>
+    <br>
+    <footer>
+        <p id="Copyright">Desenvolvido por Matheus Mendes !</p>
+        <ul>
             <p>Social Media</p>
-            <ul>
-                <li><a href="GitHub"><i class="fab fa-github"></i> GitHub</a></li>
-                <li><a href="Linkedin"><i class="fab fa-linkedin"></i> LinkedIn</a></li>
-                <li><a href="Contato"><i class="fas fa-user"></i> Contato</a></li>
-            </ul>
-        </nav>
-    </main>
+            <li><a href="GitHub"><i class="fab fa-github"></i> GitHub</a></li>
+            <li><a href="Linkedin"><i class="fab fa-linkedin"></i> LinkedIn</a></li>
+            <li><a href="Contato"><i class="fas fa-user"></i> Contato</a></li>
+        </ul>
+    </footer>
 </body>
 
 </html>
