adicionado os links para contato

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <img src="https://dummyimage.com/300x300/000/fff" alt="img teste" />
         </div>
         <div class="box-content">
-            <h1>Sobre</h1>
+            <h1>SOBRE</h1>
             <p>
                 <br>Estou me formando no curso de Gestão de Técnologia da Informação.
                 <br>Sempre gostei desta área de programação, diferentes ideias vão surgindo conforme o desenvolvimento de projetos vai evoluindo suas complexidades.
@@ -44,7 +44,7 @@
     <br>
     <div class="sessao-skills">
         <div class="header-session">
-            <h3>Skills</h3><br>
+            <h3>SKILLS</h3><br>
             <hr id="header-underline">
         </div>
         <div class="flex-skills">
@@ -75,6 +75,15 @@
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque impedit magni, corporis exercitationem soluta vitae itaque, rem eum odit quibusdam alias quasi totam facilis beatae et fuga quo esse eligendi?</p>
                 </div>
             </div>
+            <div class="content-skill">
+                <div class="logo-skill">
+                    <img src="resource/SQLimg.png" alt="sql" id="skills-img">
+                    <p>SQL Server</p>
+                </div>
+                <div class="descrição">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque impedit magni, corporis exercitationem soluta vitae itaque, rem eum odit quibusdam alias quasi totam facilis beatae et fuga quo esse eligendi?</p>
+                </div>
+            </div>
         </div>
         <br>
     </div>
@@ -83,16 +92,7 @@
         <div class="flex-skills">
             <div class="content-skill">
                 <div class="logo-skill">
-                    <img src="resource/SQLimg.png" alt="JS" id="skills-img">
-                    <p>SQL Server</p>
-                </div>
-                <div class="descrição">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque impedit magni, corporis exercitationem soluta vitae itaque, rem eum odit quibusdam alias quasi totam facilis beatae et fuga quo esse eligendi?</p>
-                </div>
-            </div>
-            <div class="content-skill">
-                <div class="logo-skill">
-                    <img src="resource/cs.jpg" alt="JS" id="skills-img">
+                    <img src="resource/cs.jpg" alt="cs" id="skills-img">
                     <p>C#</p>
                 </div>
                 <div class="descrição">
@@ -101,8 +101,17 @@
             </div>
             <div class="content-skill">
                 <div class="logo-skill">
-                    <img src="resource/ASPnet.jpg" alt="JS" id="skills-img">
+                    <img src="resource/ASPnet.jpg" alt="Asp" id="skills-img">
                     <p>ASP.Net</p>
+                </div>
+                <div class="descrição">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque impedit magni, corporis exercitationem soluta vitae itaque, rem eum odit quibusdam alias quasi totam facilis beatae et fuga quo esse eligendi?</p>
+                </div>
+            </div>
+            <div class="content-skill">
+                <div class="logo-skill">
+                    <img src="resource/SQLimg.png" alt="sql" id="skills-img">
+                    <p>Git e GitHub</p>
                 </div>
                 <div class="descrição">
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque impedit magni, corporis exercitationem soluta vitae itaque, rem eum odit quibusdam alias quasi totam facilis beatae et fuga quo esse eligendi?</p>
@@ -111,14 +120,18 @@
         </div>
         <br>
     </div>
+
+    <br>
+
+    </div>
     <br>
     <footer>
         <p id="Copyright">Desenvolvido por Matheus Mendes !</p>
         <ul>
             <p>Social Media</p>
-            <li><a href="GitHub"><i class="fab fa-github"></i> GitHub</a></li>
-            <li><a href="Linkedin"><i class="fab fa-linkedin"></i> LinkedIn</a></li>
-            <li><a href="Contato"><i class="fas fa-user"></i> Contato</a></li>
+            <li><a target="_blank" href="https://github.com/matheuscabral3"><i class="fab fa-github"></i> GitHub</a></li>
+            <li><a target="_blank" href="https://www.linkedin.com/in/matheus-mendes-653755180/"><i class="fab fa-linkedin"></i> LinkedIn</a></li>
+            <!-- <li><a href="Contato"><i class="fas fa-user"></i> Contato</a></li> -->
         </ul>
     </footer>
 </body>
